# PersonalProjectUsharau

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
src/backend/: CalculatorEngine.cpp  CalculatorEngine.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  History.cpp  History.h  MathUtils.cpp  MathUtils.h  Sorter.cpp  Sorter.h
src/cli/: CalculatorApp.cpp  CalculatorApp.h  DateMode.cpp  DateMode.h  Modes.cpp  Modes.h  main_cli.cpp
src/tests/: test_calculator.cpp
src/utils/: ArgumentParser.cpp  ArgumentParser.h  LinkedList.h
